# mzr

./: .gitignore  Cargo.toml  readme.md
completions/: script.bash
rust/: Cargo.toml
rust/src/: colors.rs  container.rs  git.rs  main.rs  paths.rs  snapshot.rs  top_dirs.rs  utils.rs  zone.rs
src/: colors.rs  container.rs  daemon.rs  git.rs  json.rs  lib.rs  main.rs  merge.rs  namespaces.rs  paths.rs  snapshot.rs  top_dirs.rs  utils.rs  zone.rs
