[package]
name = "mzr"
version = "0.1.0"
authors = ["Michael Sloan <mgsloan@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.5", features = ["serde"] }
daemonize = "0.3.0"
failure = "0.1.2"
failure_derive = "0.1.2"
ipc-channel = "0.10.1"
libc = "0.2.43"
libmount = "0.1.11"
nix = "0.11.0"
semver = { version = "0.9.0", features = ["serde"] }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
shrinkwraprs = "0.2.0"
structopt = "0.2.10"
void = "1.0.2"
walkdir = "2.2.5"
yansi = "0.4.0"

[lib]
name = "mzr"
path = "src/lib.rs"
