[package]
name = "mzr"
version = "0.1.0"
authors = ["Michael Sloan <mgsloan@gmail.com>"]

[dependencies]
structopt = "0.2.10"
yansi = "0.4.0"
serde = "1.0.70"
serde_derive = "1.0.70"
nix = "0.11.0"
ipc-channel = "0.10.1"
libmount = "0.1.11"
failure = "0.1.2"
failure_derive = "0.1.2"
shrinkwraprs = "0.2.0"
void = "1.0.2"
semver = "0.9.0"
